--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,10 @@ dependencies:
   percent_indicator: ^2.1.9+1
   font_awesome_flutter: ^8.12.0
 
+  # Firebase dependencies
+  firebase_auth: ^1.0.3
+  cloud_firestore: ^1.0.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
